<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="GVL_Log" Id="{d2e63ab5-6f42-4229-bf4f-3a9b255a5e88}">
    <Declaration><![CDATA[VAR_GLOBAL
	LogToTextBuffer		: ST_String_FIFO;	// Text log
	fbLocalTime			: FB_LocalSystemTime;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>